--- a/website/public/index.html
+++ b/website/public/index.html
@@ -11,6 +11,6 @@
 <body>
     <div id="app"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=2"></script>
 </body>
 </html>
