--- a/website/src/html/index.html
+++ b/website/src/html/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roadside Stands</title>
     <link rel="icon" type="image/png" href="images/apples.png">
-    <link rel="stylesheet" href="styles.css?v=2">
+    <link rel="stylesheet" href="styles.css?ts={ts}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
 <body>
     <div id="app"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="js/main.js?v=2"></script>
+    <script src="js/main.js?ts={ts}"></script>
 </body>
 </html>
