--- a/website/src/html/index.html
+++ b/website/src/html/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, interactive-widget=overlays-content">
       <title>Roadside Stands</title>
       <link rel="icon" href="images/apples.png">
       <link rel="stylesheet" href="styles.css?ts={ts}">
