start defining api for stands

--- a/server/resources/public/index.html
+++ b/server/resources/public/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang = "en">
   <head>
-    <title>Storage</title>
+    <title>Roadside</title>
   </head>
   <body>
-    <h1>Storage</h1>
+    <h1>Roadside</h1>
     <form method = "post" action = "api/register">
       <p>
-        <label for "login">Login:</label>
-        <input type = "text" id = "login" name = "login"/>
+        <label for "login">User:</label>
+        <input type = "text" id = "user" name = "user"/>
       </p>
       <p>
         <label for "password">Password:</label>
         <input type = "password" id = "password" name = "password"/>
-      </p>
-      <p>
-        <label for "id">Id:</label>
-        <input type = "text" id = "id" name = "id"/>
       </p>
       <p>
         <input type = "submit" name = "submit" value = "Create"/>
