tests passing but ugly

--- a/server/resources/public/index.html
+++ b/server/resources/public/index.html
@@ -8,7 +8,7 @@
     <form method = "post" action = "api/register">
       <p>
         <label for "login">User:</label>
-        <input type = "text" id = "user" name = "user"/>
+        <input type = "text" id = "login" name = "login"/>
       </p>
       <p>
         <label for "password">Password:</label>
